[package]
    categories = ["command-line-interface"]
    description = "A minimal, zero-dependency terminal spinner for Rust CLI applications"
    edition = "2024"
    exclude = [
        ".github/",
        "demo.gif",
        "demo.tape",
        "proptest-regressions/",
    ]
    keywords = ["cli", "progress", "spinner", "terminal", "tui"]
    license = "MIT"
    name = "nanospinner"
    readme = "README.md"
    repository = "https://github.com/anthonysgro/nanospinner"
    version = "0.3.3"

[dependencies]

[dev-dependencies]
    proptest = "1"
